// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthBlocklistVault deposit can be called by not blocked user 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 69078,
}
`;

exports[`EthBlocklistVault deposit deposit through receive fallback can be called by not blocked sender 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 76519,
}
`;

exports[`EthBlocklistVault ejecting user blocklist manager can eject all of the user assets 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 118535,
}
`;

exports[`EthBlocklistVault ejecting user blocklist manager can eject some of the user assets 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 144812,
}
`;

exports[`EthBlocklistVault ejecting user does not fail for user with no osToken shares 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 118535,
}
`;

exports[`EthBlocklistVault ejecting user does not fail for user with no vault shares 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 55884,
}
`;

exports[`EthBlocklistVault mint osToken can mint from not blocked user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 173861,
}
`;
